# transaction-analyzer

./: .gitignore  CMakeLists.txt  README.md  generate_data.py
scripts/: GenerateData.py
src/: Account.hpp  TransactionGraph.hpp
